fix: Update .gitignore to not exclude Rust src/bin directory
Changed 'bin/' to '/bin/' to only exclude root-level bin directory
(for C# builds) and not Rust's src/bin/ directory which contains
important binary sources.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ target/
 Cargo.lock
 
 # C#
-bin/
-obj/
+# Only ignore bin/ and obj/ at root level, not in subdirectories like src/bin/
+/bin/
+/obj/
 *.user
 *.suo
 *.cache
