feat: Add --keys and --keys-simple flags to main CLI
Users can now launch the action debugger directly from sql-cli:
- sql-cli --keys         : Launch full TUI debugger
- sql-cli --keys-simple  : Launch simple console logger

This makes it easy to explore and understand the action system
without needing to know about the separate binaries.

--- a/sql-cli/Cargo.toml
+++ b/sql-cli/Cargo.toml
@@ -16,6 +16,14 @@ name = "dataview_debug"
 path = "src/bin/dataview_debug.rs"
 
 [[bin]]
+name = "action_debugger"
+path = "src/bin/action_debugger.rs"
+
+[[bin]]
+name = "action_logger"
+path = "src/bin/action_logger.rs"
+
+[[bin]]
 name = "test-csv"
 path = "integration_tests/test_csv.rs"
 
